--- a/hello.html
+++ b/hello.html
@@ -2,8 +2,15 @@
 <html lang="eng">
     <head>
         <title>Hello!</title>
+        <style>
+            .baz {
+                color: blue;
+            }
+        </style>
     </head>
     <body>
-        Hello World!
+        <h1 class="baz">Hello World!</h1>
+        <h1 class="baz">Hello World!</h1>
+        <h1 class="baz">Hello World!</h1>
     </body>
 </html>
