changed line 12 to test merge conflit

--- a/hello.html
+++ b/hello.html
@@ -9,7 +9,7 @@
         </style>
     </head>
     <body>
-        <h1 class="baz">First commit through github editor</h1>
+        <h1 class="baz">Editing this line to test how to merge conflits</h1>
         <h1 class="baz">Changing through github to test git pull command</h1>
         <h1 class="baz">Hello World!</h1>
     </body>
