Changed style color and line 12 to test merge conflit

--- a/hello.html
+++ b/hello.html
@@ -4,12 +4,12 @@
         <title>Hello!</title>
         <style>
             .baz {
-                color: blue;
+                color: red;
             }
         </style>
     </head>
     <body>
-        <h1 class="baz">First commit through github editor</h1>
+        <h1 class="baz">First commit through github edito!!r</h1>
         <h1 class="baz">Changing through github to test git pull command</h1>
         <h1 class="baz">Hello World!</h1>
     </body>
