Small changes in text

--- a/hello.html
+++ b/hello.html
@@ -9,8 +9,8 @@
         </style>
     </head>
     <body>
-        <h1 class="baz">Editing this line to test how to merge conflits</h1>
-        <h1 class="baz">Sucessfull merge of conflit and push back to github.</h1>
+        <h1 class="baz">Editing this in a new branch to understand how to work with branches.</h1>
+        <h1 class="baz">Let's see if this works</h1>
         <h1 class="baz">Hello World!</h1>
     </body>
 </html>
